[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/enemySwimming_1.png" type="Texture" id=1]
[ext_resource path="res://art/enemyFlyingAlt_2.png" type="Texture" id=2]
[ext_resource path="res://art/enemyFlyingAlt_1.png" type="Texture" id=3]
[ext_resource path="res://art/enemyWalking_1.png" type="Texture" id=4]
[ext_resource path="res://art/enemySwimming_2.png" type="Texture" id=5]
[ext_resource path="res://art/enemyWalking_2.png" type="Texture" id=6]
[ext_resource path="res://Mob.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "swim",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.0
height = 16.0

[sub_resource type="Animation" id=3]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="Node2D" type="RigidBody2D"]
collision_layer = 3
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." groups=["mobs"]]

[node name="DeathAnim" type="AnimationPlayer" parent="."]
anims/fadeout = SubResource( 3 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="DeathAnim" to="." method="_on_DeathAnim_animation_finished"]
